# lab08

./: CMakeLists.txt  CPackConfig.cmake  Dockerfile  README.md
.github/workflows/: build.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt  equation.cpp
